--- a/index.html
+++ b/index.html
@@ -133,6 +133,72 @@
         </div>
 
 
+	<div class="my-4 text-left">
+            <h2>Selected Publications</h2>
+            <ul>
+                <li>
+			<strong>[AAAI'25]</strong> Metric-Agnostic Continual Learning for Sustainable Group Fairness. <br>
+			Heng Lian, <strong>Chen Zhao</strong>, Zhong Chen, Xingquan Zhu, My T. Thai, Yi He <br>
+			<em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
+		</li>
+		<li>
+			<strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
+			Guihong Wan, Ninghui Hao, Crystal Maung, Haim Schweitzer, <strong>Chen Zhao</strong>, Kun-Hsing Yu, Yevgeniy Semenov <br>
+			<em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
+		</li>
+		<li>
+                        <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
+                        <u>Qin Tian</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
+                        <em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
+                </li>
+		<li>
+			<strong>[KDD'24]</strong> Algorithmic Fairness Generalization under Covariate and Dependence Shifts Simultaneously. </br>
+			<strong>Chen Zhao</strong><sup>*</sup>, Kai Jiang<sup>*</sup>, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Earl Grant, Feng Chen. <br/>
+			<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2024
+		</li>
+		<li>
+			<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. </br>
+			Minglai Shao<sup>*</sup>, <u>Dong Li</u><sup>*</sup>, <strong>Chen Zhao</strong><sup>*</sup>, Xintao Wu, <u>Yujie Lin</u>, Qin Tian. <br/>
+			<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
+		</li>
+		<li>
+			<strong>[IJCAI'24]</strong> Towards Counterfactual Fairness-aware Domain Generalization in Changing Environments. </br>
+			<u>Yujie Lin</u>, <strong>Chen Zhao</strong>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen. <br/>
+			<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
+		</li>
+		<li>
+			<strong>[KDD'23]</strong> Towards Fair Disentangled Online Learning for Changing Environments. </br>
+			<strong>Chen Zhao</strong><sup>*</sup>, Feng Mi<sup>*</sup>, Xintao Wu, Kai Jiang, Latifur Khan, Christan Earl Grant, Feng Chen.<br/>
+			<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2023
+		</li>
+		<li>
+			<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. </br>
+			<strong>Chen Zhao</strong>, Dawei Du, Anthony Hoogs, Christopher Funk.<br/>
+			<em>In Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition</em>, 2023
+		</li>
+		<li>
+			<strong>[KDD'22]</strong> Adaptive Fairness-Aware Online Meta-Learning for Changing Environments. </br>
+			<strong>Chen Zhao</strong><sup>*</sup>, Feng Mi<sup>*</sup>, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen. <br/>
+			<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2022
+		</li>
+		<li>
+			<strong>[AAAI'22]</strong> A Nested Bi-level Optimization Framework for Robust Few-Shot Learning. </br>
+			Krishnateja Killamsetty, Changbin Li, <strong>Chen Zhao</strong>, Rishabh Krishnan Iyer, Feng Chen. <br/>
+			<em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2022
+		</li>
+                <li>
+			<strong>[KDD'21]</strong> Fairness-Aware Online Meta-learning. </br>
+			<strong>Chen Zhao</strong>, Feng Chen, Bhavani Thuraisingham. <br/>
+			<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2021
+		</li>
+		<li>
+			<strong>[WWW'21]</strong> CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining. </br>
+			Zhuoyi Wang, Yuqiao Chen, <strong>Chen Zhao</strong>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan. <br/>
+			<em>In Proceedings of the ACM International World Wide Web Conference</em>, 2021
+		</li>
+            </ul>
+        </div>
+	    
 	    
         <div class="my-4 text-left">
             <h2>Research</h2>
