--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
 	<div class="my-4 text-left">
             <h2>Selected Publications</h2>
+		<p style="color:red;">For a full list of publications, see <a href="publications.html">Publications</a>.</p>
             <ul>
                 <li>
 			<strong>[AAAI'25]</strong> Metric-Agnostic Continual Learning for Sustainable Group Fairness. <br>
