--- a/students.html
+++ b/students.html
@@ -126,9 +126,10 @@
             <div>
             <p><strong>Thesis Committee</strong></p>
             	<ul>
-            		<li>Shaif Chowdhury, Ph.D. student, Baylor University, 2024 (expected) </li>
-            		<li>Feng Mi, Ph.D. student, The University of Texas at Dallas, 2024 (expected) </li>
-            		<li>Alessandra Rodriguez, M.S., Baylor University, 2023  </li>
+            		<li>Evan Collins, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2025 (expected)</li>
+                    <li>Shaif Chowdhury, Ph.D. student, Department of Computer Science, Baylor University, 2025 (expected) </li>
+            		<li>Feng Mi, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2025 (expected) </li>
+            		<li>Alessandra Rodriguez, M.S., Department of Computer Science, Baylor University, 2023  </li>
             	</ul>
             </div>
 
