--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 	    <ul>
 		<li>[01/2025] Our survey on Computational Pathology Foundation Models is available online (arXiv preprint, 2501.15724). </li>
 		<li>[01/2025] I am invited to give a talk at the AAAI 2025 Bridge. </li>
+		<li>[01/2025] I am nominated as an outstanding reviewer for KDD 2025. </li>
 		<li>[01/2025] One paper is accepted by DASFAA 2025. </li>
 		<li>[01/2025] One workshop ARRML'25 is accepted by SDM 2025. </li>
 		<li>[01/2025] One tutorial is accepted by SDM 2025. </li>
@@ -218,6 +219,7 @@
 	<div class="my-4 text-left">
 	    <h2>Awards & Honors</h2>
 		<ul>
+			<li type="disc"> Outstanding Reviewer, The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD2025).</li>
 			<li type="disc"> Dissertation Research Award, $1,224, The University of Texas at Dallas, 2021-2022. </li>
 			<li type="disc"> Student Travel Award, IEEE International Conference on Data Mining (ICDM), U.S. National Science Foundation, 2020. </li>
 			<li type="disc"> First Prize in the 11th "Challenge Cup" National Undergraduate Academic Science and Technology, Tianjin Municipal Education Commission, Top 5% among all works in Tianjin City, 2011. </li>
