--- a/teaching.html
+++ b/teaching.html
@@ -67,12 +67,12 @@
             	<ul>
             		<li>INF 624, Predictive Modeling </li>
                     <ul>
-                        <li>Spring 2025, Fall 2024 </li>
+                        <li>Fall 2025, Spring 2025, Fall 2024 </li>
                     </ul>
                     
             		<li>INF 428/528, Analysis, Visualization, and Prediction in Analytics </li>
                     <ul>
-                        <li>Spring 2025, Fall 2024, Spring 2024, Fall 2022, Spring 2022 </li>
+                        <li>Fall 2025, Spring 2025, Fall 2024, Spring 2024, Fall 2022, Spring 2022 </li>
                     </ul>
                     
             		<li>INF 108, Programming for Problem Solving </li>
