--- a/services.html
+++ b/services.html
@@ -101,7 +101,7 @@
 				<li>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD)</li>
 				<li>International Joint Conference on Neural Networks (IJCNN)</li>
 				<li>International Conference on Machine Learning (ICML)</li>
-				<li>International Joint Conference on Artificial Intelligence (IJCAI, Research track, Survey track)</li> 
+				<li>International Joint Conference on Artificial Intelligence (IJCAI, Main track, Survey track)</li> 
 				<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
 				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
