--- a/services.html
+++ b/services.html
@@ -98,6 +98,7 @@
             <ul>
 		    <li>2025: 
 			<ul>
+				<li>The Conference on Neural Information Processing Systems (NeurIPS)</li>
 				<li>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD)</li>
 				<li>International Joint Conference on Neural Networks (IJCNN)</li>
 				<li>International Conference on Machine Learning (ICML)</li>
