--- a/talks.html
+++ b/talks.html
@@ -77,9 +77,9 @@
             <p><strong>Invited Talks</strong></p>
             <ul>
                 
-                <li>Acquiring and Structuring Scientific Knowledge in AI Research.
+                <li>Advancements in Foundation Models for Computational Pathology.
                     <ul>
-                        <li>AAAI Bridge on Artificial Intelligence for Scholarly Communication (February 25th-26th, 2025, Philadelphia, PA, USA, Host: Azanzi Jiomekong and Sören Auer)</li>
+                        <li>AAAI Bridge between AI and Scientific Knowledge Organization (February 25th, 2025, Philadelphia, PA, USA, Host: Azanzi Jiomekong and Sören Auer)</li>
                     </ul>
                 </li>
                 
