--- a/talks.html
+++ b/talks.html
@@ -61,6 +61,7 @@
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
                             The Annual AAAI Conference on Artificial Intelligence (AAAI), Philadelphia, PA, USA, February 25th, 2025.
                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>]
+                            [<a href="https://drive.google.com/file/d/1Qkq9iEI3LEHA3AR4YVgGcL3fCEjC_ip6/view?usp=drive_link">Slides</a>]
                         </li>
                         <li>
                             <strong>Chen Zhao</strong>, Xintao Wu.<br>
