--- a/services.html
+++ b/services.html
@@ -52,6 +52,7 @@
             <ul>
                     <li>2025:
                         <ul>
+			    <li>[Session Chair] The Annual AAAI Conference on Artificial Intelligence (AAAI'25).</li>
 			    <li>[Workshop Chair] <a href="https://bigdataieee.org/BigData2025/index.html">The IEEE International Conference on Big Data</a> (IEEE BigData'25) </li>
 			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshops on Advances in Robust and Reliable Machine Learning</a> (ARRML @ SDM'25).</li>
 			    <li>[Tutorial Chair] <a href="https://www3.cs.stonybrook.edu/~icdm2025/organizingcommittee.html#:~:text=Stony%20Brook%20University-,Tutorial%20Chairs,-Chen%20Zhao"> The IEEE International Conference on Data Mining</a> (ICDM'25).</li>
