--- a/talks.html
+++ b/talks.html
@@ -50,6 +50,17 @@
             <p><strong>Conference Tutorials</strong></p>
             <ul>
                 <li>
+                    Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluations
+                    <ul>
+                        <li>
+                            Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu.<br>
+                            The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), June 10th, 2025.
+<!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
+                        </li>
+                    </ul>
+                </li>
+                
+                <li>
                     Supervised Algorithmic Fairness in Distribution Shifts. 
                     <ul>
                         <li>
