--- a/talks.html
+++ b/talks.html
@@ -91,7 +91,7 @@
                 
                 <li>Advancements in Foundation Models for Computational Pathology.
                     <ul>
-                        <li>AAAI Bridge between AI and Scientific Knowledge Organization (February 25th, 2025, Philadelphia, PA, USA, Host: Azanzi Jiomekong and Sören Auer)</li>
+                        <li>AAAI Bridge between AI and Scientific Knowledge Organization (February 2025, Philadelphia, PA, USA, Host: Azanzi Jiomekong and Sören Auer)</li>
                     </ul>
                 </li>
                 
