--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[03/2025] I will serve as a panelist for NSF. </li>
 		<li>[02/2025] I will serve as a reviewer for NeurIPS 2025. </li>
 		<li>[02/2025] I will serve as the Workshop Chair for IEEE BigData 2025. </li>
 		<li>[01/2025] Our survey on Computational Pathology Foundation Models is available online (arXiv preprint, 2501.15724). </li>
