--- a/services.html
+++ b/services.html
@@ -54,31 +54,31 @@
                         <ul>
 			    <li>[Session Chair] The Annual AAAI Conference on Artificial Intelligence (AAAI'25).</li>
 			    <li>[Workshop Chair] <a href="https://bigdataieee.org/BigData2025/index.html">The IEEE International Conference on Big Data</a> (IEEE BigData'25) </li>
-			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshops on Advances in Robust and Reliable Machine Learning</a> (ARRML @ SDM'25).</li>
+			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning</a> (ARRML @ SDM'25).</li>
 			    <li>[Tutorial Chair] <a href="https://www3.cs.stonybrook.edu/~icdm2025/organizingcommittee.html#:~:text=Stony%20Brook%20University-,Tutorial%20Chairs,-Chen%20Zhao"> The IEEE International Conference on Data Mining</a> (ICDM'25).</li>
                             <li>[Tutorial Chair] <a href="https://www.pakdd2025.org/organization/#:~:text=de%20Madrid%2C%20Spain-,Tutorial%20Chairs,-Chen%20Zhao%2C%20Baylor"> The Pacific-Asia Conference on Knowledge Discovery and Data Mining</a> (PAKDD'25).</li>
                         </ul>
                     <li>2024:
                         <ul>
                             <li>[Session Chair] IEEE International Conference on Big Data (IEEE BigData'24).</li>
-			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshops on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
-                            <li>[Organizer, Chair] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshops on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
-                            <li>[Organizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
-                            <li>[Organizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
+			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshop on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
+                            <li>[Organizer, Chair] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshop on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
+                            <li>[Organizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshop on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
+                            <li>[Organizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
                             <li>[Co-Chair] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/CommitteeMember.html#:~:text=Big%20Data%20Cup%20Challenges%20Co%2DChairs">Big Data Cup Challenges</a> (IEEE BigData'24).</li>
                             <li>[Best Poster Award Committee] Ph.D. Forum (IEEE BigData'24).</li>
 			    <li>[Organizer] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>.</li>
                         </ul>
                     <li>2023:
                         <ul>
-                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">The 2nd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'23).</li>
-                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">The 2nd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'23).</li>
+                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">The 2nd Workshop on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'23).</li>
+                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">The 2nd Workshop on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'23).</li>
                             <li>[Session Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'23).</li>
                         </ul>
                     <li>2022:
                         <ul>
-                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">The 1st Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'22).</li>
-                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">The 1st Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ AAAI'22).</li>
+                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">The 1st Workshop on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'22).</li>
+                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">The 1st Workshop on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ AAAI'22).</li>
                             <li>[Mentor at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD'22).</li>
                         </ul>
             </ul>
