--- a/talks.html
+++ b/talks.html
@@ -54,7 +54,7 @@
                     <ul>
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu.<br>
-                            The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), June 10th, 2025.
+                            The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), Sydney, Australia, June 10th, 2025.
 <!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
                         </li>
                     </ul>
