--- a/talks.html
+++ b/talks.html
@@ -95,7 +95,7 @@
                     </ul>
                 </li>
                 
-                <li>Advances Fairness and Robustness in Machine Learning Under Distribution Shifts.
+                <li>Advances in Fairness and Robustness in Machine Learning Under Distribution Shifts.
                     <ul>
                         <li>Department of Computer Science, Brigham Young University (March 2025, Provo, UT, USA, Host: Porter Jenkins)</li>
                         <li>AI TIME (October 2024, Online, Host: Qing Qi)</li>
