--- a/services.html
+++ b/services.html
@@ -213,6 +213,10 @@
 		
             <p><strong>Workshop Reviewer </strong></p>
             <ul>
+		    <li>2025:
+			<ul>
+				<li>IEEE International Workshop on Machine Learning for Signal Processing</li>
+			</ul>
 		    <li>2023:
 			<ul>
 				<li>NeurIPS Workshop on Diffusion Models</li>
