--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[02/2025] I will serve as a reviewer for ACML 2025. </li>
+		<li>[03/2025] Two workshops (EAI and UDM) are accepted by KDD 2025. </li>
+		<li>[03/2025] I will serve as a reviewer for ACML 2025. </li>
 		<li>[03/2025] I will serve as a panelist for NSF. </li>
 		<li>[02/2025] I will serve as a reviewer for NeurIPS 2025. </li>
 		<li>[02/2025] I will serve as the Workshop Chair for IEEE BigData 2025. </li>
