--- a/publications.html
+++ b/publications.html
@@ -53,10 +53,15 @@
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Preprints</strong></p>
                 <ol>
-                    
+
+                    <li>
+                        Multi-Modal Foundation Models for Computational Pathology: A Survey. <br>
+                        <u>Dong Li</u><sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, <u>Xinyu Wu</u>, <u>Xiaohui Chen</u>, Yi He, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
+                        <em>ArXiv preprint, 2503.09091</em>
+                    </li>
                     <li>
                         A Survey on Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluation Tasks. <br>
-                        <u>Dong Li</u><sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Ajit J. Nirmal, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
+                        <u>Dong Li</u><sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, <u>Xinyu Wu</u>, Ajit J. Nirmal, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
                         <em>ArXiv preprint, 2501.15724</em>
                     </li>
                     <li>
