--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[03/2025] Our survey on Multi-Modal Foundation Models for Computational Pathology is available online (arXiv preprint, 2503.09091). </li>
 		<li>[03/2025] Two workshops (EAI and UDM) are accepted by KDD 2025. </li>
 		<li>[03/2025] I will serve as a reviewer for ACML 2025. </li>
 		<li>[03/2025] I will serve as a panelist for NSF. </li>
