--- a/services.html
+++ b/services.html
@@ -101,6 +101,7 @@
             <ul>
 		    <li>2025: 
 			<ul>
+				<li>ACM International Conference on Information and Knowledge Management (CIKM)</li>
 				<li>The Conference on Neural Information Processing Systems (NeurIPS)</li>
 				<li>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD)</li>
 				<li>International Joint Conference on Neural Networks (IJCNN)</li>
