--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[03/2025] One paper is accepted by ICDE 2025. </li>
 		<li>[03/2025] I will serve as a program committee for IEEE BigData 2025. </li>
 		<li>[03/2025] I will serve as a program committee for CIKM 2025. </li>
 		<li>[03/2025] Our survey on Multi-Modal Foundation Models for Computational Pathology is available online (arXiv preprint, 2503.09091). </li>
@@ -147,6 +148,11 @@
 		<p style="color:red;">For a full list of publications, see <a href="publications.html">Publications</a>.</p>
             <ul>
                 <li>
+			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <br>
+			Sadaf Md Halim, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
+			<em>In Proceedings of the IEEE International Conference on Data Engineering</em>, 2025
+		</li>
+		<li>
 			<strong>[AAAI'25]</strong> Metric-Agnostic Continual Learning for Sustainable Group Fairness. <br>
 			Heng Lian, <strong>Chen Zhao</strong>, Zhong Chen, Xingquan Zhu, My T. Thai, Yi He <br>
 			<em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
