--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 		<p style="color:red;">For a full list of publications, see <a href="publications.html">Publications</a>.</p>
             <ul>
                 <li>
-			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <br>
-			Sadaf Md Halim, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
+			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <be>
+			<u>Sadaf Md Halim</u>, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
 			<em>In Proceedings of the IEEE International Conference on Data Engineering</em>, 2025
 		</li>
 		<li>
