--- a/publications.html
+++ b/publications.html
@@ -129,6 +129,7 @@
                 <strong>IJCAI</strong>(2), 
                 <strong>AAAI</strong>(3),
                 <strong>CVPR</strong>(1), 
+                <strong>ICDE</strong>(1),
                 <strong>WWW</strong>(1), 
                 <strong>CIKM</strong>(3), 
                 <strong>SDM</strong>(1),
@@ -145,6 +146,11 @@
             
                 <ol>
 
+                    <li>
+            			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <br>
+            			<u>Sadaf Md Halim</u>, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
+            			<em>In Proceedings of the IEEE International Conference on Data Engineering</em>, 2025
+		            </li>
                     <li>
                         <strong>[DASFAA'25]</strong> Less is More: Efficient Weight “Farcasting” with 1-Layer Neural Network. <br>
                         Xiao Shou, Debarun Bhattacharjya, Yanna Ding, <strong>Chen Zhao</strong>, Rui Li, Jianxi Gao <br>
