--- a/talks.html
+++ b/talks.html
@@ -110,21 +110,21 @@
                     <ul>
                         <li>AI TIME (July 2023, Online, Host: Qing Qi)</li>
                         <li>AI TIME (July 2022, Online, Host: Qing Qi)</li>
-                        <li>Smart Society and Big Data Intelligence Lab, Tianjin University (May 2022, Tianjin, China, Host: Minglai Shao)</li>
+<!--                         <li>Smart Society and Big Data Intelligence Lab, Tianjin University (May 2022, Tianjin, China, Host: Minglai Shao)</li> -->
                         <li>AI TIME (November 2021, Online, Host: Qing Qi)</li>
                     </ul>
                 </li>
 
-                <li>Applications of Machine Learning in Social Science.
+<!--                 <li>Applications of Machine Learning in Social Science.
                     <ul>
                         <li>Institute of National Politics, Yunnan University (May 2023, Kunming, Yunnan, China, Host: Taihui Guo)</li>
                     </ul>
-                </li>
+                </li> -->
 
                 <li>Fairness-aware Machine Learning for Multi-task Learning and Domain Generalization.
                     <ul>
-                        <li>School of Information Science and Engineering, Yunnan University (May 2023, Kunming, Yunnan, China, Host: Kun Yue)</li>
-                        <li>School of Business Administration, Southwestern University of Finance and Economics (May 2023, Chengdu, Sichuan, China, Host: Jingjing Tang and Shan Xu)</li>
+<!--                         <li>School of Information Science and Engineering, Yunnan University (May 2023, Kunming, Yunnan, China, Host: Kun Yue)</li> -->
+<!--                         <li>School of Business Administration, Southwestern University of Finance and Economics (May 2023, Chengdu, Sichuan, China, Host: Jingjing Tang and Shan Xu)</li> -->
                         <li>AI TIME (May 2023, Online, Host: Qing Qi)</li>
                         <li>Department of Electronics and Computer Engineering Technology, Indiana State University (April 2023, Terre Haute, IN, USA, Host: Xiaolong Li)</li>
                         <li>Department of Computer Science, SUNY at Albany (April 2023, Albany, NY, USA, Host: Aveek Dutta)</li>
