--- a/students.html
+++ b/students.html
@@ -126,7 +126,8 @@
             <div>
             <p><strong>Thesis Committee</strong></p>
             	<ul>
-            		<li>Evan Collins, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
+            		<li>Joseph Yu, Ph.D. student, Department of Computer Science, Baylor University, 2026 (expected) </li>
+                    <li>Evan Collins, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
                     <li>Shaif Chowdhury, Ph.D. student, Department of Computer Science, Baylor University, 2025 (expected) </li>
                     <li>Kai Jiang, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2025 (expected) </li>
             		<li>Feng Mi, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
