--- a/services.html
+++ b/services.html
@@ -101,6 +101,7 @@
             <ul>
 		    <li>2025: 
 			<ul>
+				<li>ACM International Conference on Multimedia (MM)</li>
 				<li>European Conference on Artificial Intelligence (ECAI)</li>
 				<li>IEEE International Conference on Big Data (BigData)</li>
 				<li>ACM International Conference on Information and Knowledge Management (CIKM)</li>
