--- a/talks.html
+++ b/talks.html
@@ -53,6 +53,11 @@
                     Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluations
                     <ul>
                         <li>
+                            Dong Li, Guihong Wan, <strong>Chen Zhao</strong>, Xintao Wu, Yevgeniy Semenov.<br>
+                            The International Joint Conference on Artificial Intelligence (IJCAI), Montreal, Canada, August 16th, 2025.
+<!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
+                        </li>
+                        <li>
                             Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu.<br>
                             The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), Sydney, Australia, June 10th, 2025.
 <!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
@@ -63,6 +68,11 @@
                 <li>
                     Supervised Algorithmic Fairness in Distribution Shifts. 
                     <ul>
+                        <li>
+                            Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
+                            The International Joint Conference on Artificial Intelligence (IJCAI), Montreal, Canada, August 16th, 2025.
+<!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
+                        </li>
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
                             SIAM International Conference on Data Mining (SDM), Alexandria, Virginia, USA, May 1st, 2025.
