--- a/talks.html
+++ b/talks.html
@@ -76,7 +76,8 @@
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
                             SIAM International Conference on Data Mining (SDM), Alexandria, Virginia, USA, May 1st, 2025.
-<!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
+                            [<a href="https://sites.google.com/view/sdm25tutorial/home">Website</a>]
+                            [<a href="https://drive.google.com/file/d/12Q-HAPL2UQpL2nsYriyj-uKfR3qj1ReR/view?usp=sharing">Slides</a>]
                         </li>
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
