--- a/talks.html
+++ b/talks.html
@@ -58,7 +58,7 @@
 <!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
                         </li>
                         <li>
-                            Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu.<br>
+                            Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu, Yevgenly Semenov.<br>
                             The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), Sydney, Australia, June 10th, 2025.
 <!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
                         </li>
