--- a/talks.html
+++ b/talks.html
@@ -53,7 +53,7 @@
                     Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluations
                     <ul>
                         <li>
-                            Dong Li, Guihong Wan, <strong>Chen Zhao</strong>, Xintao Wu, Yevgeniy Semenov.<br>
+                            Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu, Yevgeniy Semenov.<br>
                             The International Joint Conference on Artificial Intelligence (IJCAI), Montreal, Canada, August 16th, 2025.
 <!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
                         </li>
