--- a/talks.html
+++ b/talks.html
@@ -60,7 +60,7 @@
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu, Yevgenly Semenov.<br>
                             The Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), Sydney, Australia, June 10th, 2025.
-<!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
+                            [<a href="https://sites.google.com/view/pakdd25tutorial/home">Website</a>]
                         </li>
                     </ul>
                 </li>
