--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[04/2025] One paper is accepted by KBS. </li>
 		<li>[04/2025] Two tutorials are accepted by IJCAI 2025. </li>
 		<li>[04/2025] I will serve as a reviewer for MM 2025. </li>
 		<li>[04/2025] I will serve as a program committee for ECAI 2025. </li>
