--- a/publications.html
+++ b/publications.html
@@ -94,22 +94,28 @@
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Journal Papers</strong></p>
                 <ol>
-                    <li>
-                        <strong>[DLT]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <br>
+
+		    	<li>
+                        	<strong>[KBS]</strong> Out-of-Distribution Detection in Heterogeneous Graphs via Energy Propagation. <br>
+                		<u>Yin Tao</u>, <strong>Chen Zhao</strong>, Xiaoyan Liu, Minglai Shao. <br/>
+                        	<em>Knowledge-Based Systems</em>, 2025
+                    	</li>
+                    	<li>
+                        	<strong>[DLT]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <br>
                 		Feng Mi, <strong>Chen Zhao</strong>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham. <br/>
-                        <em>The ACM Distributed Ledger Technologies: Research and Practice</em>, 2024
-                    </li>
-                    <li>
-                        <strong>[Frontier in Big Data]</strong> Efficient Out-of-Distribution Detection via Layer-Adaptive Scoring and Early Stopping. <br>
-                        <u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen. <br>
-                        <em>Frontiers in Big Data, section Data Mining and Management</em>, 2024
-                    </li>
-                    <li>
+                        	<em>The ACM Distributed Ledger Technologies: Research and Practice</em>, 2024
+                    	</li>
+                    	<li>
+                        	<strong>[Frontier in Big Data]</strong> Efficient Out-of-Distribution Detection via Layer-Adaptive Scoring and Early Stopping. <br>
+                        	<u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen. <br>
+                        	<em>Frontiers in Big Data, section Data Mining and Management</em>, 2024
+                    	</li>
+                    	<li>
                 		<strong>[TKDD]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. </br>
                 		<strong>Chen Zhao</strong>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
                 		<em>The ACM Transactions on Knowledge Discovery from Data</em>, 2024
                 	</li>
-                    <li>
+                    	<li>
                 		<strong>[Development]</strong> CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane. </br>
                 		Jingjing Li, Lianjie Miao, <strong>Chen Zhao</strong>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu. <br/>
                 		<em>Development</em>, 147-173, 2017 
