--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[04/2025] One paper is accepted by KBS. </li>
+		<li>[04/2025] Two papers are accepted by IJCAI 2025. </li>
 		<li>[04/2025] Two tutorials are accepted by IJCAI 2025. </li>
+		<li>[04/2025] One paper is accepted by KBS. </li>
 		<li>[04/2025] I will serve as a reviewer for MM 2025. </li>
-		<li>[04/2025] I will serve as a program committee for ECAI 2025. </li>
+		<li>[04/2025] I will serve as a program committee member for ECAI 2025. </li>
 		<li>[03/2025] One paper is accepted by ICDE 2025. </li>
-		<li>[03/2025] I will serve as a program committee for IEEE BigData 2025. </li>
-		<li>[03/2025] I will serve as a program committee for CIKM 2025. </li>
+		<li>[03/2025] I will serve as a program committee member for IEEE BigData 2025. </li>
+		<li>[03/2025] I will serve as a program committee member for CIKM 2025. </li>
 		<li>[03/2025] Our survey on Multi-Modal Foundation Models for Computational Pathology is available online (arXiv preprint, 2503.09091). </li>
 		<li>[03/2025] Two workshops (EAI and UDM) are accepted by KDD 2025. </li>
 		<li>[03/2025] I will serve as a reviewer for ACML 2025. </li>
@@ -123,7 +124,7 @@
 		<li>[01/2025] I will serve as the Tutorial Chair for ICDM 2025. </li>
 		<li>[01/2025] I will serve as a reviewer for KDD 2025 (February cycle). </li>
 		<li>[01/2025] I will serve as a reviewer for TKDD. </li>
-		<li>[01/2025] I will serve as a reviewer for the journal of Pattern Recognition. </li>
+		<li>[01/2025] I will serve as a reviewer for the Journal of Pattern Recognition. </li>
 	    </ul>
 	    
 	<div class="my-4 text-left">
@@ -151,6 +152,16 @@
             <h2>Selected Publications</h2>
 		<p style="color:red;">For a full list of publications, see <a href="publications.html">Publications</a>.</p>
             <ul>
+		<li>
+			<strong>[IJCAI'25]</strong> FADE: Towards Fairness-aware Data Generation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
+			<u>Yujie Lin</u><sup>*</sup>, <u>Dong Li</u><sup>*</sup>, Minglai Shao, Guihong Wan, <strong>Chen Zhao</strong>. <br/>
+			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2024
+		</li>
+		<li>
+			<strong>[IJCAI'25]</strong> A Novel Sparse Active Online Learning Framework for Streaming Anomaly Detection in Open Feature Spaces. </br>
+			Zhong Chen, Yi He, Di Wu, <strong>Chen Zhao</strong>, Meikang Qiu. <br/>
+			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2024
+		</li>   
                 <li>
 			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <br>
 			<u>Sadaf Md Halim</u>, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
