--- a/publications.html
+++ b/publications.html
@@ -70,11 +70,6 @@
                         <em>ArXiv preprint, 2411.02671</em>
                     </li>
                     <li>
-                		FADE: Towards Fairness-aware Augmentation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
-                		<u>Yujie Lin</u><sup>*</sup>, <u>Dong Li</u><sup>*</sup>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
-                		<em>ArXiv preprint, 2406.09495</em>
-                	</li>
-                    <li>
                 		Graphs Generalization under Distribution Shifts. </br>
                 		<u>Qin Tian</u>, Wenjun Wang, <strong>Chen Zhao</strong>, Minglai Shao, Wang Zhang, Dong Li. <br/>
                 		<em>ArXiv preprint, 2403.16334</em>
@@ -132,7 +127,7 @@
 
             <p style="text-align:justify;background-color:#dbd9db">
                 <strong>KDD</strong>(5), 
-                <strong>IJCAI</strong>(2), 
+                <strong>IJCAI</strong>(4), 
                 <strong>AAAI</strong>(3),
                 <strong>CVPR</strong>(1), 
                 <strong>ICDE</strong>(1),
@@ -151,12 +146,21 @@
             </p>
             
                 <ol>
-
-                    <li>
-            			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <br>
-            			<u>Sadaf Md Halim</u>, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
-            			<em>In Proceedings of the IEEE International Conference on Data Engineering</em>, 2025
-		            </li>
+		<li>
+			<strong>[IJCAI'25]</strong> FADE: Towards Fairness-aware Data Generation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
+			<u>Yujie Lin</u><sup>*</sup>, <u>Dong Li</u><sup>*</sup>, Minglai Shao, Guihong Wan, <strong>Chen Zhao</strong>. <br/>
+			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2024
+		</li>
+		<li>
+			<strong>[IJCAI'25]</strong> A Novel Sparse Active Online Learning Framework for Streaming Anomaly Detection in Open Feature Spaces. </br>
+			Zhong Chen, Yi He, Di Wu, <strong>Chen Zhao</strong>, Meikang Qiu. <br/>
+			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2024
+		</li> 
+                <li>
+			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <br>
+			<u>Sadaf Md Halim</u>, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
+			<em>In Proceedings of the IEEE International Conference on Data Engineering</em>, 2025
+		    </li>
                     <li>
                         <strong>[DASFAA'25]</strong> Less is More: Efficient Weight “Farcasting” with 1-Layer Neural Network. <br>
                         Xiao Shou, Debarun Bhattacharjya, Yanna Ding, <strong>Chen Zhao</strong>, Rui Li, Jianxi Gao <br>
