--- a/talks.html
+++ b/talks.html
@@ -102,6 +102,7 @@
                 
                 <li>Advancements in Foundation Models for Computational Pathology.
                     <ul>
+                        <li><strong>[Keynote Talk]</strong>The workshop on Foundational AI for Pervasive Computing (June 2025, Sydney, Australia, Host: Beiyu Lin) </li>
                         <li>AAAI Bridge between AI and Scientific Knowledge Organization (February 2025, Philadelphia, PA, USA, Host: Azanzi Jiomekong and Sören Auer)</li>
                     </ul>
                 </li>
