--- a/services.html
+++ b/services.html
@@ -52,8 +52,9 @@
             <ul>
                     <li>2025:
                         <ul>
-			    <li>[Organizer, Chair] The 4th Workshop on Ethical Artificial Intelligence: Methods and Applications(EAI @ KDD'25).</li>
-                            <li>[Organizer, Chair] The 4th Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM @ KDD'25).</li>
+			    <li>[Organizer, Chair] <a href="https://arrl-icdm.github.io/arrl2025/">The International Workshop on Adaptable, Reliable, and Responsible Learning</a> (ARRL @ ICDM'25)</li>
+			    <li>[Organizer, Chair] <a href="https://meviuslab.github.io/EAI2025/">The 4th Workshop on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'25).</li>
+                            <li>[Organizer, Chair] <a href="https://meviuslab.github.io/UDM2025/">The 4th Workshop on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'25).</li>
 			    <li>[Session Chair] The Annual AAAI Conference on Artificial Intelligence (AAAI'25).</li>
 			    <li>[Workshop Chair] <a href="https://bigdataieee.org/BigData2025/index.html">The IEEE International Conference on Big Data</a> (IEEE BigData'25) </li>
 			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning</a> (ARRML @ SDM'25).</li>
