--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[05/2025] I will serve as a workshop chair for ARRL @ ICDM 2025. </li>
 		<li>[04/2025] I am invited to give a keynote talk at the workshop on Foundational AI for Pervasive Computing at PAKDD 2025. </li>
 		<li>[04/2025] Two papers are accepted by IJCAI 2025. </li>
 		<li>[04/2025] Two tutorials are accepted by IJCAI 2025. </li>
