--- a/services.html
+++ b/services.html
@@ -102,6 +102,7 @@
             <ul>
 		    <li>2025: 
 			<ul>
+				<li>IEEE International Conference on Data Mining (ICDM)</li>
 				<li>ACM International Conference on Multimedia (MM)</li>
 				<li>European Conference on Artificial Intelligence (ECAI)</li>
 				<li>IEEE International Conference on Big Data (BigData)</li>
