--- a/services.html
+++ b/services.html
@@ -187,6 +187,7 @@
             <ul>
 		    <li>2025:
 			<ul>
+				<li>Journal of Frontiers in Big Data</li>
 				<li>ACM Transactions on Knowledge Discovery from Data (TKDD)</li>
 				<li>Pattern Recognition</li>
 			</ul>
